Fix for text overflowing

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -23,10 +23,15 @@ body {
 }
 
 .modalContainer {
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.854);
   color: white;
+
+  .imgDescription {
+    height: 40%;
+    overflow-y: scroll;
+  }
 }
